--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.3",
+    "mongoose": "^6.8.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
