--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.2",
+    "nestjs-form-data": "^1.8.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
