--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.2",
     "nestjs-form-data": "^1.8.7",
+    "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
